Fixing overlapping content and navbar issue on mobile view

--- a/weatherapp/src/Pages/mainPage/weatherForm.module.css
+++ b/weatherapp/src/Pages/mainPage/weatherForm.module.css
@@ -19,11 +19,16 @@
 } */
 
 .container {
-    position: relative;
     width: 100vw;
     height: 100vh;
     max-height: 100%;
     background-color: var(--background);
+}
+
+.wrapper {
+    width: 100%;
+    height: auto;
+    padding-top: 5vh;
 }
 
 .contentContainer {
@@ -33,17 +38,21 @@
     flex-direction: row;
     justify-content: center;
     color: var(--text-primary);
-    top: 3vh;
+    /*top: 3vh;*/
     background-color: var(--background);
 }
 
 .mainLocationContainer {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: center;
-    width: 55vw;
-    height: 90vh;
+    /* width: 55vw; */
+    /* height: 80vh; */
+    flex-basis: auto;
+    height: auto;
+    width: auto;
+
 }
 
 .currentWeatherContainer {
@@ -97,17 +106,18 @@
 .weeklyWeatherContainer {
     display: flex;
     width: 25vw;
-    height: 90vh;
+    height: 80vh;
     justify-content: center;
-    align-items: flex-end;
+    align-items: flex-start;
 }
 
 .weeklyWeatherWrapper {
     background-color: var(--primary);
     width: 90%;
-    height: 79vh;
+    height: 77vh;
     border-radius: 20px;
     margin-bottom: 1vh;
+    margin-top: 1.6vh;
 }
 
 .weeklyList {
@@ -120,7 +130,7 @@
 
 .searchBarWrapper {
     width: 100%;
-    height: 10vh;
+    height: 5vh;
     display: flex;
     align-items: center;
 }
@@ -128,7 +138,7 @@
 .searchLocation {
     width: 50%;
     float: left;
-    margin-top: 6vh;
+    /*margin-top: 6vh;*/
     margin-left: 11vw;
     z-index: 2;
 }
@@ -286,10 +296,6 @@
 }
 
 @media screen and (max-width: 920px) {
-
-    /* * {
-        background-color: var(--background);
-    } */
     .container {
         width: 100vw;
         display: flex;
@@ -298,6 +304,12 @@
         flex-grow: 1;
         background-color: var(--background);
         overflow: auto;
+    }
+
+    .wrapper {
+        width: 100%;
+        height: auto;
+        padding-top: 2vh;
     }
 
     .contentContainer {
@@ -309,16 +321,6 @@
         align-items: center;
         overflow: auto;
         margin-top: 1vh;
-    }
-
-    .mainLocationContainer {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        align-items: center;
-        width: 100%;
-        min-height: 102vh;
-        /* height: 100vh; */
     }
 
     .currentWeatherContainer {
@@ -409,10 +411,9 @@
     }
 
     .locationTitle {
-        margin-top: 1vh;
+        margin-top: 2vh;
         margin-left: 5vw;
         margin-bottom: 0;
-        font-family: 'Nunito', sans-serif;
         font-size: 2.5rem;
     }
 
@@ -423,28 +424,20 @@
 
     .locationDate {
         margin-left: 5vw;
-        font-family: 'Nunito', sans-serif;
-        text-transform: uppercase;
     }
 
     #currentTemp {
         margin-left: 10vw;
-        margin-top: auto;
-        font-family: 'Nunito', sans-serif;
         font-size: 4rem;
     }
 
     #feelsLike {
         margin-left: 10vw;
         margin-bottom: 5vh;
-        text-transform: uppercase;
-        font-family: 'Nunito', sans-serif;
     }
 
     .subTitle {
         margin-left: 25px;
-        font-family: 'Nunito', sans-serif;
-        text-transform: uppercase;
         font-size: 1rem;
     }
 
@@ -460,8 +453,6 @@
         margin-top: 1vw;
         margin-left: 2vw;
         margin-bottom: 0;
-        font-family: 'Nunito', sans-serif;
-        text-transform: uppercase;
         font-size: 1.3rem;
     }
 
@@ -478,15 +469,12 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        font-family: 'Nunito', sans-serif;
-        text-transform: uppercase;
         font-size: 1rem;
         margin-bottom: 5px;
     }
 
     .infoText {
         margin-left: 30px;
-        font-family: 'Nunito', sans-serif;
         font-size: 0.9rem;
     }
 
@@ -495,9 +483,6 @@
         margin: auto;
         width: 90%;
         height: 15vh;
-        overflow: auto;
-        scroll-behavior: smooth;
-        /* scrollbar-width: none; */
     }
 
     .mainWeatherIcon {
@@ -513,7 +498,7 @@
 
 @media screen and (max-width: 670px) {
     .contentContainer {
-        margin-top: 12vh;
+        margin-top: 2vh;
     }
 
     .searchBarWrapper {
@@ -561,7 +546,7 @@
     .hourlyWeatherContainer {
         display: flex;
         width: 100vw;
-        height: 32vh;
+        height: 30vh;
         align-items: center;
         justify-content: center;
     }
